@@ -108,8 +108,8 @@ fn test_ttyport_set_standard_baud() {
     assert_eq!(slave.baud_rate().unwrap(), 115200);
 }
 
+// On mac this fails because you can't set nonstandard baud rates for these virtual ports
 #[test]
-// Until !30 is merged mac and ios don't support arbitrary baud rates so don't run
 #[cfg_attr(any(target_os = "ios", all(target_os = "linux", target_env = "musl"), target_os = "macos"), ignore)]
 fn test_ttyport_set_nonstandard_baud() {
     // `master` must be used here as Dropping it causes slave to be deleted by the OS.
